--- a/prj1/views/add-product.html
+++ b/prj1/views/add-product.html
@@ -5,52 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Add Product</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-        font-family: sans-serif;
-      }
-
-      main {
-        padding: 1rem;
-      }
-
-      .main-header {
-        width: 100%;
-        height: 3.5rem;
-        background-color: #f0d459;
-        padding: 0 1.5rem;
-      }
-
-      .main-header__nav {
-        height: 100%;
-        display: flex;
-        align-items: center;
-      }
-
-      .main-header__item-list {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-      }
-      .main-header__item {
-        margin: 0 1rem;
-        padding: 0;
-      }
-
-      .main-header__item a {
-        text-decoration: none;
-        color: white;
-      }
-
-      .main-header__item a:hover,
-      .main-header__item a:active,
-      .main-header__item a.active {
-        color: #6d51d1;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/product.css" />
   </head>
   <body>
     <header class="main-header">
@@ -60,13 +16,13 @@
             <a href="/">Shop</a>
           </li>
           <li class="main-header__item">
-            <a class="active" href="/add-product">Add Product</a>
+            <a class="active" href="/admin/add-product">Add Product</a>
           </li>
         </ul>
       </nav>
     </header>
     <main>
-      <form class="product-form" action="/add-product" method="POST">
+      <form class="product-form" action="/admin/add-product" method="POST">
         <div class="form-control">
           <label for="title">Title</label>
           <input type="text" name="title" id="title" />
