--- a/Dynamic routes/views/shop/index.ejs
+++ b/Dynamic routes/views/shop/index.ejs
@@ -15,15 +15,14 @@
                         </header>
                         <div class="card__image">
                             <img src="<%= product.imageUrl %>"
-                                alt="A Book">
+                                alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">$<%= product.price %></h2>
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <form action="/add-to-cart" method="POST"><button class="btn">Add to Cart</button></form>
-                            
+                            <button class="btn">Add to Cart</button>
                         </div>
                     </article>
                 <% } %>
