--- a/Dynamic routes/views/shop/cart.ejs
+++ b/Dynamic routes/views/shop/cart.ejs
@@ -17,6 +17,9 @@
                             </li>
                             <%})%>
                     </ul>
+                    <form action="/create-order" method="POST">
+                   <button type="submit" class="btn">Order Now!</button>
+                </form>
                 <%} else {%>
                     <h1>No products in cart!</h1>
                     <%}  %>
